# rusticvision

./: Cargo.toml
assets/shaders/: raytrace.wgsl  test.wgsl
benches/: benchmark.rs
src/: data_structures.rs  lib.rs  main.rs  prelude.rs  renderer.rs
src/material/: mod.rs  parser.rs  parser_tests.rs
src/parser/: face_parser.rs  material_parser.rs  mod.rs  triangle_parser.rs  vertex_parser.rs
src/primitives/: aabb.rs  mod.rs  ray.rs  triangle.rs
src/primitives/material/: mod.rs  parser.rs
src/primitives/triangle/: mod.rs  parser.rs  parser_tests.rs
src/primitives/trianglemesh/: mod.rs  parser.rs  parser_tests.rs
src/scene/: camera.rs  mod.rs  obj_parser.rs  object.rs  parser.rs  renderer.rs
src/scene/object/: mod.rs  parser.rs
src/traits/: mod.rs
test/: test.mtl  test_multiple_mats.mtl  test_scene.mtl
