[package]
name = "rusticvision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]

std = ["glam/std"]
libm = ["glam/libm"]

[dependencies]
rand = "0.8.5"
glam = { version = "0.22.0", default-features = false, features = ["libm", "rand"] }
image = "0.24.5"
nom = "7.1.2"
rayon = "1.6.1"
itertools = "0.10.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false