[package]
name = "rusticvision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]

std = ["glam/std"]
libm = ["glam/libm"]

[dependencies]
rand = "0.8.5"
glam = { version = "0.24.0", default-features = false, features = [
    "libm",
    "rand",
] }
image = "0.24.5"
nom = "7.1.2"
rayon = "1.6.1"
itertools = "0.11.0"
wgpu = "0.16"
bytemuck = {version = "1.13", features = ["derive"] }
futures-intrusive = "0.5.0"
pollster = "0.3.0"
encase = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
